@startuml ObserverPatterns
package "Observer - Stock" {
  interface Observer
  interface Subject
  class Stock {
    -symbol: string
    -price: number
    -observers: List<Observer>
    +setPrice(p: number)
    +getPrice(): number
    +attach(o: Observer)
    +detach(o: Observer)
    +notify()
  }
  class Investor
  Subject <|.. Stock
  Observer <|.. Investor
  Stock "1" o-- "*" Investor : notifies
}

package "Observer - Task" {
  interface Observer
  interface Subject
  class Task {
    -id: string
    -state: string
    -observers: List<Observer>
    +changeState(s: string)
    +attach(o: Observer)
    +detach(o: Observer)
    +notify()
  }
  class TeamMember
  Subject <|.. Task
  Observer <|.. TeamMember
  Task "1" o-- "*" TeamMember : subscribers
}
@enduml
